# hubris

./: .gitignore  Cargo.toml  README.mkdn  mqtt_test.py
app/demo-nrf52840-feather/: Cargo.toml  README.md  app.toml  gateway.toml  gdb_init  node.toml  nrf.jlink  openocd.gdb  openocd_gdb
app/demo-nrf52840-feather/src/: main.rs
app/gimletlet/: app-vsc7448.toml  app.toml
chips/: nRF52840.toml
chips/nrf52/: chip.toml  memory.toml  openocd.cfg  openocd.gdb
drv/nrf52-gpio/: Cargo.toml  build.rs
drv/nrf52-gpio/api/: Cargo.toml  build.rs
drv/nrf52-gpio/api/src/: lib.rs
drv/nrf52-gpio/common/: Cargo.toml
drv/nrf52-gpio/common/src/: lib.rs
drv/nrf52-gpio/src/: main.rs
drv/nrf52-i2c/: Cargo.toml  build.rs
drv/nrf52-i2c/src/: main.rs
drv/nrf52-radio/: Cargo.toml
drv/nrf52-radio/src/: buffer.rs  lib.rs  phy.rs  ringbuf.rs
drv/nrf52-rng/: Cargo.toml
drv/nrf52-rng/src/: main.rs
drv/nrf52-spi/: Cargo.toml
drv/nrf52-spi-server/: Cargo.toml  build.rs
drv/nrf52-spi-server/src/: main.rs
drv/nrf52-spi/src/: lib.rs
drv/nrf52-uart/: Cargo.toml  build.rs
drv/nrf52-uart/api/: Cargo.toml  build.rs
drv/nrf52-uart/api/src/: lib.rs
drv/nrf52-uart/src/: main.rs
drv/rng-api/src/: lib.rs
drv/sensirion-sps32/: Cargo.toml
drv/sensirion-sps32/src/: hdlc.rs  lib.rs
drv/stm32h7-eth/: Cargo.toml
drv/stm32h7-update-server/src/: main.rs
drv/update-api/src/: lib.rs
idl/: aether.idol  mdns.idol  nrf52-gpio.idol  nrf52-uart.idol
reference/: index.html
sys/kern/src/arch/: arm_m.rs
sys/userlib/: Cargo.toml
sys/userlib/src/: lib.rs  macros.rs
task/aether/: Cargo.toml  build.rs
task/aether/api/: Cargo.toml  build.rs
task/aether/api/src/: lib.rs
task/aether/src/: log_smoltcp.rs  main.rs  server.rs
task/aetherping/: Cargo.toml
task/aetherping/src/: main.rs
task/air-quality/: Cargo.toml  bsec-generic  build.rs
task/air-quality/src/: bme.rs  bsec.rs  main.rs  tcp_interop.rs
task/air-quality/src/bsec/: bme.rs  error.rs  mod.rs
task/air-quality/src/bsec/compat/: acos.rs  acosf.rs  acosh.rs  acoshf.rs  asin.rs  asinf.rs  asinh.rs  asinhf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  atanh.rs  atanhf.rs  cbrt.rs  cbrtf.rs  ceil.rs  ceilf.rs  copysign.rs  copysignf.rs  cos.rs  cosf.rs  cosh.rs  coshf.rs  erf.rs  erff.rs  exp.rs  exp10.rs  exp10f.rs  exp2.rs  exp2f.rs  expf.rs  expm1.rs  expm1f.rs  fabs.rs  fabsf.rs  fdim.rs  fdimf.rs  floor.rs  floorf.rs  (+67 more)
task/blinky/: Cargo.toml
task/blinky/src/: main.rs
task/hiffy/: Cargo.toml
task/hiffy/src/: common.rs  main.rs  nrf52.rs
task/jefe/src/: main.rs
task/mdns/: Cargo.toml  build.rs
task/mdns/api/: Cargo.toml  build.rs
task/mdns/api/src/: lib.rs
task/mdns/src/: dispatch.rs  main.rs  server.rs
task/mqtt/: Cargo.toml
task/mqtt/src/: clock_interop.rs  main.rs  tcp_interop.rs
task/slip-aether/: Cargo.toml
task/slip-aether/src/: main.rs
task/throughput/: Cargo.toml
task/throughput/src/: main.rs
task/udpbroadcast/: Cargo.toml
task/udpbroadcast/src/: main.rs
task/udpecho/: Cargo.toml
task/udpecho/src/: main.rs
task/vsc7448/src/bsp/: sidecar_1.rs
