[package]
edition = "2021"
readme = "README.md"
name = "demo-nrf52840-feather"
version = "0.1.0"

[features]
itm = ["panic-itm", "kern/klog-itm"]
semihosting = ["panic-semihosting", "kern/klog-semihosting"]

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "*", optional = true }
nrf52840-pac = { version = "0.11.0", features = ["rt"] }

drv-nrf52-gpio-api = {path = "../../drv/nrf52-gpio/api"}

[dependencies.kern]
path = "../../sys/kern"
default-features = false

# enables `cargo fix` usage.
[[bin]]
name = "demo-nrf52840-feather"
test = false
bench = false
