[package]
name = "drv-nrf52-spi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
cfg-if = "1"
ringbuf = {path = "../../lib/ringbuf"}
nrf52840-pac = { version = "0.11.0", default-features = false }
drv-nrf52-gpio-api = {path = "../../drv/nrf52-gpio/api"}
drv-nrf52-spi = {path = "../nrf52-spi", default-features = false}
drv-spi-api = {path = "../spi-api", default-features = false}

[build-dependencies]
build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
serde = "1"
quote = "1"
call_rustfmt = {path = "../../build/call_rustfmt"}
syn = {version = "1", features = ["parsing"]}
proc-macro2 = "1"
indexmap = "1.7"

[features]
spi0 = []
spi1 = []
spi2 = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-nrf52-spi-server"
test = false
bench = false
