[package]
name = "task-aether"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-semihosting = {version = "*", optional = true}
nrf52-radio = { path = "../../drv/nrf52-radio/" }
nrf52840-pac = "*"
log = { version = "^0.4.5", default-features = false, features = [] }
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
num-traits = {version = "0.2", default-features = false}
serde = {version = "1", default-features = false, features = ["derive"]}
ssmarshal = {version = "1", default-features = false}
zerocopy = "0.6"
task-aether-api = {path = "./api" }
hubris-num-tasks = {path = "../../sys/num-tasks", features = ["task-enum"]}


[dependencies.smoltcp]
version = "*"
default-features = false
features = [
  "verbose", "log", "proto-sixlowpan", "socket-udp", "medium-ieee802154"
]

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
build-util = {path = "../../build/util/"}
serde = "*"
quote = "*"
proc-macro2 = "1"
syn = "*"

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting", "cortex-m-semihosting", "nrf52-radio/semihosting" ]
log-null = ["userlib/log-null"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-aether"
test = false
bench = false
