[package]
name = "task-aetherping"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
serde = {version = "1", default-features = false, features = ["derive"]}
ssmarshal = {version = "1", default-features = false}
num-traits = {version = "0.2", default-features = false}
task-aether-api = {path = "../aether/api"}
cortex-m-semihosting = {version = "*", optional = true}

[dependencies.smoltcp]
path = "../../../smoltcp/"
default-features = false
features = [
  "verbose", "log", "proto-sixlowpan", "socket-udp", "medium-ieee802154"
]

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting", "cortex-m-semihosting"]
log-null = ["userlib/log-null"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-aetherping"
test = false
bench = false
