[package]
name = "task-air-quality"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
userlib = {path = "../../sys/userlib"}
bme68x-rust = "*"
drv-i2c-api = {path = "../../drv/i2c-api"}
drv-i2c-devices = { path = "../../drv/i2c-devices" }
# drv-nrf52-uart-api = {path = "../../drv/nrf52-uart/api"}
# drv-sensirion-sps32 = {path = "../../drv/sensirion-sps32/"}

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting" ]

[build-dependencies]
build-util = {path = "../../build/util"}
build-i2c = {path = "../../build/i2c"}

[[bin]]
name = "task-air-quality"
test = false
bench = false
