[package]
name = "task-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
ssmarshal = {version = "1", default-features = false}
num-traits = {version = "0.2", default-features = false}
task-aether-api = {path = "../aether/api"}
minimq = {path = "../../../minimq/", features = ["logging"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
log = "*"
drv-nrf52-uart-api = {path = "../../drv/nrf52-uart/api"}
drv-sensirion-sps32 = {path = "../../drv/sensirion-sps32/"}
air-quality-messages = {path = "../../../air-quality-messages/"}
postcard = { version = "*", features = ["experimental-derive"] }
serde = { version = "1.0.*", default-features = false }
heapless = "0.7"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-mqtt"
test = false
bench = false
