[package]
name = "task-slip-aether"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-semihosting = {version = "*"}
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
drv-nrf52-uart-api = {path = "../../drv/nrf52-uart/api"}
task-aether-api = {path = "../aether/api"}
serial-line-ip = "*"

[dependencies.smoltcp]
# path = "../../../smoltcp/"
default-features = false
features = [ "verbose", "log", "proto-ipv6", "proto-ipv4"]

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting" ]

[[bin]]
name = "task-slip-aether"
test = false
bench = false
