[package]
name = "task-aether-api"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-idol-err = {path = "../../../lib/derive-idol-err" }
userlib = {path = "../../../sys/userlib"}
serde = {version = "1", default-features = false, features = ["derive"]}
ssmarshal = {version = "1", default-features = false}
num-traits = {version = "0.2", default-features = false}
zerocopy = "0.6"
hubris-num-tasks = {path = "../../../sys/num-tasks", features = ["task-enum"]}

[dependencies.smoltcp]
path = "../../../../smoltcp/"
default-features = false
features = [
  "verbose", "log", "proto-sixlowpan", "socket-udp", "medium-ieee802154"
]

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}
build-util = {path = "../../../build/util/"}
serde = "*"
quote = "*"
proc-macro2 = "1"
syn = "*"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
bench = false
